language/move-lang/tests/move_check/parser/friend_decl_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_missing_semicolon.move:6:1
  │
6 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'

