language/move-lang/tests/move_check/parser/friend_decl_missing_semicolon.move
address 0x42 {
module A {}

module M {
    friend 0x42::A
}
}
